Fix image overflows

--- a/static/photo.scss
+++ b/static/photo.scss
@@ -12,7 +12,8 @@
   margin: 0;
 }
 #photo img {
-  height: 100vh;
+  max-height: 100vh;
+  max-width: 100%;
   margin: 0 auto;
 }
 
